# Music

./: .gitignore  CMakeLists.txt  MusicCreator.h  README.md  SoloCreator.cpp  SoloCreator.h  SoundMaker.cpp  SoundMaker.h  main.cpp  run.sh
musiccreators/: MultiCreator.cpp  MultiCreator.h  MusicCreator.h  SoloCreator.cpp  SoloCreator.h
src/: ChangableFrequency.cpp  ChangableFrequency.h  FIFOPlayer.cpp  FIFOPlayer.h  Helper.cpp  Helper.h  InteractiveCreator.cpp  InteractiveCreator.h  KeyboardReader.cpp  KeyboardReader.h  Looper.cpp  Looper.h  MultiCreator.cpp  MultiCreator.h  MusicCreator.cpp  MusicCreator.h  PitchChanger.cpp  PitchChanger.h  Player.cpp  Player.h  SingleFrequency.cpp  SingleFrequency.h  SoloCreator.cpp  SoloCreator.h  TimedPlayer.cpp  TimedPlayer.h  WaveFunctions.cpp  WaveFunctions.h  main.cpp
